cabal-version:      2.4
name:               probLinceDSL
version:            0.1.0.0

library 
    exposed-modules:  ProbLinceDSL
    build-depends:    base ^>=4.16.4.0,
                      monad-bayes >=1.1.0,
                      probability >= 0.2.8,
                      parsec >= 3.1.16.1,
                      Chart >= 1.9.4,
                      aeson >= 2.1.2.1,
                      dlist >= 1.0,
                      containers >= 0.6.7,
                      mtl >= 2.2.2,
                      transformers >= 0.5.6.2,
                      colour >= 2.3.6,
                      Chart-cairo >= 1.8,
                      ad >= 4.5.4,
                      bytestring >= 0.11.4.0,
                      hmatrix-gsl >= 0.19.0.1,
                      hmatrix >= 0.20.2,
                      time == 1.11.1.1
    hs-source-dirs:   src
    other-modules:    PRE,
                      RTE,
                      TrjMonoid,
                      Exceptions,
                      Cp,
                      Combinators,
                      DEvent,
                      Stats,
                      Graphic,
                      Histogram
    default-language: Haskell2010
